--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <div class="w3-section">
       <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> CA, US</p>
       <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: +1 (951)946-9769</p>
-      <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: kouhpainejad@                                  .com</p>
+      <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: kouhpainejad@gmail.com</p>
     </div><br>
     <p>Let's get in touch. Send me a message:</p>
 
